// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render An error should be logged if no onPress or title given 1`] = `
<Touchable
  hitSlop={
    Object {
      "bottom": 10,
      "left": 10,
      "right": 10,
      "top": 10,
    }
  }
  onPress={[Function]}
  style={
    Array [
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "center",
        "padding": 10,
      },
      undefined,
      Object {},
    ]
  }
>
  <Text
    style={
      Object {
        "color": "#17b6b0",
        "fontSize": 18,
      }
    }
  />
</Touchable>
`;

exports[`Render SecondaryButton should render without crashing 1`] = `
<Touchable
  hitSlop={
    Object {
      "bottom": 10,
      "left": 10,
      "right": 10,
      "top": 10,
    }
  }
  onPress={[Function]}
  style={
    Array [
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "center",
        "padding": 10,
      },
      undefined,
      Object {},
    ]
  }
>
  <Text
    style={
      Object {
        "color": "#17b6b0",
        "fontSize": 18,
      }
    }
  >
    Test
  </Text>
</Touchable>
`;
